# ffmpeg-wrapper

./: .gitignore  README.md  eslint.config.mjs  latest.json  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yaml
app/: App.vue  app.config.ts  constants.ts  createContext.ts
app/assets/: main.css
app/components/: AppColorMode.vue  AppDockContainer.vue  AppSuspense.vue  AppUpdate.vue  AppVersion.vue  AppWindowOverlay.vue  CommandParameter.vue  CommandParameters.vue  FileDrop.vue  FileHistory.vue  FolderContent.vue  FolderVideo.vue  VideoExport.vue  VideoOptions.vue  VideoPreview.vue  WindowOverlay.vue  videoExport.vue
app/components/command/: CommandParameter.vue
app/components/file/: FileDrop.vue  FileHistory.vue  FileVideo.vue
app/components/folder/: FolderHistory.vue  FolderItem.vue
app/components/timeline/: TimelineAudioGraph.vue  TimelineBar.vue  TimelineBarResizeHandle.vue  TimelineBarSegmentMoveable.vue  TimelineThumb.vue
app/hooks/: useArguments.ts  useCommand.ts  useCommandArgs.ts  useFFmpeg.ts  useFfmpeg.ts  useFilters.ts  useFrames.ts  useIDB.ts  useKeepScrollBottom.ts  useThumb.ts  useVideo.ts
app/pages/: export.vue  folder.vue  index.vue
app/stores/: useOptionsStore.ts  usePathsStore.ts
app/types/: ffmpeg.ts  parameters.ts  video.ts
app/utils/: entries.ts  formatSeconds.ts  interpolation.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src-tauri/windows/fragments/: registry.wxs
(+12 files in other folders)
